CLOUD-98 Добавить KeyCounter компонент CLOUD-17 taint/tolerations/annotations в фабрику CLOUD-6 Лейбл с количеством item'ов в запросе в фабрику CLOUD-18 labels в фабрику

--- a/templates/CustomColumnsOverride/k8s:container.yaml
+++ b/templates/CustomColumnsOverride/k8s:container.yaml
@@ -20,10 +20,10 @@ spec:
     - jsonPath: .restartCount
       name: RestartCount
       type: string
-    - jsonPath: .lastState.waiting.reason
+    - jsonPath: .state.waiting.reason
       name: WaitingdReason
       type: string
-    - jsonPath: .lastState.terminated.reason
+    - jsonPath: .state.terminated.reason
       name: TerminatedReason
       type: string
 
@@ -62,10 +62,10 @@ spec:
     - jsonPath: .restartCount
       name: RestartCount
       type: string
-    - jsonPath: .lastState.waiting.reason
+    - jsonPath: .state.waiting.reason
       name: WaitingdReason
       type: string
-    - jsonPath: .lastState.terminated.reason
+    - jsonPath: .state.terminated.reason
       name: TerminatedReason
       type: string
 
