--- a/templates/Factory/deployment-details.yaml
+++ b/templates/Factory/deployment-details.yaml
@@ -59,21 +59,13 @@ spec:
               lineHeight: 24px
               fontFamily: RedHatDisplay, Overpass, overpass, helvetica, arial, sans-serif
 
-        # Right: status (Available or error) based on condition reason
-        - type: StatusText
+        - type: antdFlex
           data:
-            id: header-status
-            value: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-            criteriaSuccess: equals
-            valueToCompareSuccess:
-              - "MinimumReplicasAvailable"
-            criteriaError: equals
-            valueToCompareError:
-              - "DeploymentReplicaFailure"
-              - "ProgressDeadlineExceeded"
-            successText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-            errorText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-            fallbackText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
+            id: status-header-block
+            vertical: true
+            gap: 4
+          children:
+            {{ include "incloud-web-resources.factory.statuses.deployment" . | nindent 12 }}
 
     # === Main content organized by tabs ===
     - type: antdTabs
@@ -283,20 +275,13 @@ spec:
                                       id: status-label
                                       text: Status
                                       strong: true
-                                  - type: StatusText
+                                  - type: antdFlex
                                     data:
-                                      id: status-value
-                                      value: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-                                      criteriaSuccess: equals
-                                      valueToCompareSuccess:
-                                        - "MinimumReplicasAvailable"
-                                      criteriaError: equals
-                                      valueToCompareError:
-                                        - "DeploymentReplicaFailure"
-                                        - "ProgressDeadlineExceeded"
-                                      successText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-                                      errorText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
-                                      fallbackText: "{reqsJsonPath[0]['.status.conditions[?(@.type=='Available')].reason']['-']}"
+                                      id: status-header-block
+                                      vertical: true
+                                      gap: 4
+                                    children:
+                                      {{ include "incloud-web-resources.factory.statuses.deployment" . | nindent 38 }}
 
                               # Rolling update strategy type
                               - type: antdFlex
@@ -417,11 +402,7 @@ spec:
                   #             baseprefix: /openapi-ui
                   #             withoutControls: true
                   #             # Path in the fetched object to the volumes array
-                  #             pathToItems:
-                  #               - spec
-                  #               - template
-                  #               - spec
-                  #               - volumes
+                  #             pathToItems: ".spec.template.spec.volumes"
 
                   # ---- INIT CONTAINERS SECTION ----
                   - type: antdCol
@@ -514,9 +495,7 @@ spec:
                               baseprefix: /openapi-ui
                               withoutControls: true
                               # Path in the fetched object to the conditions array
-                              pathToItems:
-                                - status
-                                - conditions
+                              pathToItems: ".status.conditions"
 
           # ------ YAML TAB ------
           - key: yaml
@@ -549,14 +528,9 @@ spec:
                   customizationId: factory-/apps/v1/replicasets
                   labelsSelectorFull:
                     reqIndex: 0
-                    pathToLabels:
-                      - spec
-                      - template
-                      - metadata
-                      - labels
+                    pathToLabels: ".spec.template.metadata.labels"
                   # Path to items list in the response
-                  pathToItems:
-                    - items
+                  pathToItems: ".items"
                   withoutControls: true
 
           # ------ PODS TAB ------
@@ -573,12 +547,7 @@ spec:
                   customizationId: factory-/v1/pods
                   labelsSelectorFull:
                     reqIndex: 0
-                    pathToLabels:
-                      - spec
-                      - template
-                      - metadata
-                      - labels
+                    pathToLabels: ".spec.template.metadata.labels"
                   # Path to items list in the response
-                  pathToItems:
-                    - items
+                  pathToItems: ".items"
                   withoutControls: true
