--- a/templates/Factory/serviceaccount-details.yaml
+++ b/templates/Factory/serviceaccount-details.yaml
@@ -231,8 +231,7 @@ spec:
                                   customizationId: factory-serviceaccount-secrets
                                   baseprefix: "/openapi-ui"
                                   withoutControls: true
-                                  pathToItems:
-                                    - secrets
+                                  pathToItems: ".secrets"
 
           # YAML tab
           - key: yaml
