--- a/templates/TableUriMapping/apps.v1.replicaset.yaml
+++ b/templates/TableUriMapping/apps.v1.replicaset.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-apps.v1.replicasets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/apps/v1/replicasets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
 
@@ -19,12 +15,8 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-apps.v1.replicasets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/apps/v1/replicasets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
 
@@ -34,11 +26,7 @@ kind: TableUriMapping
 metadata:
   name: factory-apps.v1.replicasets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "factory-/apps/v1/replicasets"
   pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
