--- a/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/TableUriMapping/argoproj.io.v1alpha1.applications.yaml
@@ -5,12 +5,8 @@ kind: TableUriMapping
 metadata:
   name: "stock-cluster-default-argoproj.io.v1alpha1.applications"
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/argoproj.io/v1alpha1/applications"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
 
@@ -20,12 +16,8 @@ kind: TableUriMapping
 metadata:
   name: "stock-namespace-default-argoproj.io.v1alpha1.applications"
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/argoproj.io/v1alpha1/applications"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/argocd-application-details/~recordValue~"
 {{- end }}
