--- a/templates/TableUriMapping/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
+++ b/templates/TableUriMapping/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
@@ -4,8 +4,6 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-clusterrolebinding-details
 spec:
-  keysToParse:
-    - metadata
-    - name
+  keysToParse: ".metadata.name"
   id: "stock-cluster-/rbac.authorization.k8s.io/v1/clusterrolebindings"
   pathToNavigate: "/openapi-ui/{clusterName}/factory/clusterrolebinding-details/~recordValue~"
