--- a/templates/Factory/replicaset-details.yaml
+++ b/templates/Factory/replicaset-details.yaml
@@ -288,14 +288,14 @@ spec:
                   #       marginTop: 10
                   #       padding: 10
                   #   children:
-                  #     - type: VisibilityContainer
-                  #       data:
-                  #         id: volumes-visibility
-                  #         value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
-                  #         style:
-                  #           margin: 0
-                  #           padding: 0
-                  #       children:
+                      # - type: VisibilityContainer
+                      #   data:
+                      #     id: volumes-visibility
+                      #     value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
+                      #     style:
+                      #       margin: 0
+                      #       padding: 0
+                      #   children:
                   #         - type: antdText
                   #           data:
                   #             id: volumes-title
@@ -407,18 +407,13 @@ spec:
                   withoutControls: true
                   labelsSelectorFull:
                     reqIndex: 0
-                    pathToLabels:
-                      - spec
-                      - template
-                      - metadata
-                      - labels
-                  pathToItems:
-                    - items
+                    pathToLabels: ".spec.template.metadata.labals"
+                  pathToItems: ".items"
 
 {{- if .Values.addons.trivy.enabled }}
           # ------ PODS TAB ------
           - key: reports
-            label: Reports
+            label: Vuln reports
             children:
               - type: EnrichedTable
                 data:
@@ -432,11 +427,25 @@ spec:
                   labelsSelector:
                     trivy-operator.resource.name: "{reqsJsonPath[0]['.metadata.name']['-']}"
                     trivy-operator.resource.kind: "{reqsJsonPath[0]['.kind']['-']}"
-                    trivy-operator.container.name: "{reqsJsonPath[0]['.spec.template.spec.containers[0].name']['-']}"
                   # Items path for Pods list
-                  pathToItems:
-                    - items
-                    - 0
-                    - report
-                    - vulnerabilities
+                  pathToItems: ".items[*].report.vulnerabilities"
+
+          - key: cfg-reports
+            label: CFG reports
+            children:
+              - type: EnrichedTable
+                data:
+                  id: ds-pods-table
+                  fetchUrl: "/api/clusters/{2}/k8s/apis/aquasecurity.github.io/v1alpha1/namespaces/{3}/configauditreports"
+                  clusterNamePartOfUrl: "{2}"
+                  customizationId: factory-aquasecurity.github.io.v1alpha1.configauditreports
+                  baseprefix: "/openapi-ui"
+                  withoutControls: true
+                  # Build label selector from pod template labels
+                  labelsSelector:
+                    trivy-operator.resource.name: "{reqsJsonPath[0]['.metadata.name']['-']}"
+                    trivy-operator.resource.kind: "{reqsJsonPath[0]['.kind']['-']}"
+                  # Items path for Pods list
+                  pathToItems: ".items[*].report.checks"
+
 {{- end -}}
