--- a/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
@@ -4,8 +4,6 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-crd-details
 spec:
-  keysToParse:
-    - metadata
-    - name
+  keysToParse: ".metadata.name"
   id: "stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions"
   pathToNavigate: "/openapi-ui/{clusterName}/factory/crd-details/~recordValue~"
