--- a/templates/TableUriMapping/apps.v1.daemonset.yaml
+++ b/templates/TableUriMapping/apps.v1.daemonset.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-apps.v1.daemonsets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/apps/v1/daemonsets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/daemonset-details/~recordValue~"
 
@@ -19,12 +15,8 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-apps.v1.daemonsets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/apps/v1/daemonsets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/daemonset-details/~recordValue~"
 
