--- a/templates/TableUriMapping/apps.v1.replicationcontroller.yaml
+++ b/templates/TableUriMapping/apps.v1.replicationcontroller.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-apps.v1.replicationcontrollers
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/v1/replicationcontrollers"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicationcontroller-details/~recordValue~"
 
@@ -19,11 +15,7 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-apps.v1.replicationcontrollers
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/v1/replicationcontrollers"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicationcontroller-details/~recordValue~"
