--- a/templates/TableUriMapping/apps.v1.statefulsets.yaml
+++ b/templates/TableUriMapping/apps.v1.statefulsets.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-apps.v1.statefullsets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/apps/v1/statefulsets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/statefulset-details/~recordValue~"
 
@@ -19,11 +15,7 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-apps.v1.statefullsets
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/apps/v1/statefulsets"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/statefulset-details/~recordValue~"
