--- a/templates/TableUriMapping/batch.v1.jobs.yaml
+++ b/templates/TableUriMapping/batch.v1.jobs.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-batch.v1.jobs
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/batch/v1/jobs"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/job-details/~recordValue~"
 
@@ -19,11 +15,7 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-batch.v1.jobs
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/batch/v1/jobs"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/job-details/~recordValue~"
