--- a/templates/TableUriMapping/rbac.authorization.k8s.io.v1.rolebindings.yaml
+++ b/templates/TableUriMapping/rbac.authorization.k8s.io.v1.rolebindings.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-rolebinding-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/rbac.authorization.k8s.io/v1/rolebindings"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/rolebinding-details/~recordValue~"
 
@@ -19,11 +15,7 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-rolebinding-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/rbac.authorization.k8s.io/v1/rolebindings"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/rolebinding-details/~recordValue~"
