--- a/templates/TableUriMapping/v1.pods.yaml
+++ b/templates/TableUriMapping/v1.pods.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-pod-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/v1/pods"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
@@ -19,12 +15,8 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-pod-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/v1/pods"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
@@ -34,12 +26,8 @@ kind: TableUriMapping
 metadata:
   name: factory-node-details-table-pods
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "factory-node-details-/v1/pods"
   pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
@@ -49,12 +37,8 @@ kind: TableUriMapping
 metadata:
   name: factory-service-details-endpointslice
 spec:
-  keysToParse:
-    - targetRef
-    - name
-  keysToParseSecond:
-    - targetRef
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "factory-service-details-endpointslice"
   pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
@@ -64,11 +48,7 @@ kind: TableUriMapping
 metadata:
   name: "factory-v1.pods"
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "factory-/v1/pods"
   pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/pod-details/~recordValue~"
