--- a/templates/TableUriMapping/v1.serviceaccounts.yaml
+++ b/templates/TableUriMapping/v1.serviceaccounts.yaml
@@ -4,12 +4,8 @@ kind: TableUriMapping
 metadata:
   name: stock-cluster-serviceaccount-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-cluster-/v1/serviceaccounts"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
 
@@ -19,12 +15,8 @@ kind: TableUriMapping
 metadata:
   name: stock-namespace-serviceaccount-details
 spec:
-  keysToParse:
-    - metadata
-    - name
-  keysToParseSecond:
-    - metadata
-    - namespace
+  keysToParse: ".metadata.name"
+  keysToParseSecond: ".metadata.namespace"
   id: "stock-namespace-/v1/serviceaccounts"
   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
 
@@ -34,7 +26,6 @@ kind: TableUriMapping
 metadata:
   name: factory-serviceaccount-secrets
 spec:
-  keysToParse:
-    - name
+  keysToParse: ".metadata.name"
   id: "factory-serviceaccount-secrets"
   pathToNavigate: "/openapi-ui/{2}/{3}/factory/secret-details/~recordValue~"
